modules/network/vpc.tf
resource "aws_vpc" "eks_pvc" {
  cidr_block           = var.cidr_block
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-pvc"
    }
  )
}
